--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p><strong>Email:</strong> wazirnordin51@gmail.com </p>
             <p><strong>Location:</strong> IIUM, Malaysia</p>
             <p><strong>Nickname:</strong> Moshu</p>
-            <p><strong>Hobbies:</strong> Working Out, Tech Ethusiast</p>
+            <p><strong>Hobbies:</strong> Working Out, Tech Enthusiast</p>
         </div>
 
         <p>Thank you for visiting!</p>
